@@ -1,1 +1,5 @@
 # MoviesRecommendation
+
+Dynamically Loading Spark Properties:
+./bin/spark-submit --name "My app" --master local[4] --conf spark.eventLog.enabled=false
+  --conf "spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" myApp.jar
